v0/book/content/pages/source-code/apps/Deals/Home.md

# 
# Deals

## Namespaces

### \Hubleto\App\Community\Deals

#### Classes

| Class                                                        | Description |
|--------------------------------------------------------------|-------------|
| [`Calendar`](./classes/Hubleto/App/Community/Deals/Calendar) |             |
| [`Loader`](./classes/Hubleto/App/Community/Deals/Loader)     |             |
| [`Workflow`](./classes/Hubleto/App/Community/Deals/Workflow) |             |

### \Hubleto\App\Community\Deals\Controllers

#### Classes

| Class                                                                            | Description |
|----------------------------------------------------------------------------------|-------------|
| [`Deals`](./classes/Hubleto/App/Community/Deals/Controllers/Deals)               |             |
| [`DealsArchive`](./classes/Hubleto/App/Community/Deals/Controllers/DealsArchive) |             |
| [`LostReasons`](./classes/Hubleto/App/Community/Deals/Controllers/LostReasons)   |             |
| [`ReportGoal`](./classes/Hubleto/App/Community/Deals/Controllers/ReportGoal)     |             |
| [`Settings`](./classes/Hubleto/App/Community/Deals/Controllers/Settings)         |             |
| [`Tags`](./classes/Hubleto/App/Community/Deals/Controllers/Tags)                 |             |

### \Hubleto\App\Community\Deals\Controllers\Api

#### Classes

| Class                                                                                                | Description |
|------------------------------------------------------------------------------------------------------|-------------|
| [`ChangeWorkflow`](./classes/Hubleto/App/Community/Deals/Controllers/Api/ChangeWorkflow)             |             |
| [`CreateFromLead`](./classes/Hubleto/App/Community/Deals/Controllers/Api/CreateFromLead)             |             |
| [`DailyDigest`](./classes/Hubleto/App/Community/Deals/Controllers/Api/DailyDigest)                   |             |
| [`GenerateInvoice`](./classes/Hubleto/App/Community/Deals/Controllers/Api/GenerateInvoice)           |             |
| [`GenerateQuotationPdf`](./classes/Hubleto/App/Community/Deals/Controllers/Api/GenerateQuotationPdf) |             |
| [`LogActivity`](./classes/Hubleto/App/Community/Deals/Controllers/Api/LogActivity)                   |             |

### \Hubleto\App\Community\Deals\Controllers\Boards

#### Classes

| Class                                                                                             | Description |
|---------------------------------------------------------------------------------------------------|-------------|
| [`DealValueByResult`](./classes/Hubleto/App/Community/Deals/Controllers/Boards/DealValueByResult) |             |
| [`DealWarnings`](./classes/Hubleto/App/Community/Deals/Controllers/Boards/DealWarnings)           |             |
| [`MostValuableDeals`](./classes/Hubleto/App/Community/Deals/Controllers/Boards/MostValuableDeals) |             |

### \Hubleto\App\Community\Deals\Extendibles

#### Classes

| Class                                                                                              | Description |
|----------------------------------------------------------------------------------------------------|-------------|
| [`AppMenu`](./classes/Hubleto/App/Community/Deals/Extendibles/AppMenu)                             |             |
| [`ContextHelp`](./classes/Hubleto/App/Community/Deals/Extendibles/ContextHelp)                     |             |
| [`MailTemplateVariables`](./classes/Hubleto/App/Community/Deals/Extendibles/MailTemplateVariables) |             |
| [`ProductTypes`](./classes/Hubleto/App/Community/Deals/Extendibles/ProductTypes)                   |             |

### \Hubleto\App\Community\Deals\Models

#### Classes

| Class                                                                       | Description |
|-----------------------------------------------------------------------------|-------------|
| [`Deal`](./classes/Hubleto/App/Community/Deals/Models/Deal)                 |             |
| [`DealActivity`](./classes/Hubleto/App/Community/Deals/Models/DealActivity) |             |
| [`DealDocument`](./classes/Hubleto/App/Community/Deals/Models/DealDocument) |             |
| [`DealHistory`](./classes/Hubleto/App/Community/Deals/Models/DealHistory)   |             |
| [`DealLead`](./classes/Hubleto/App/Community/Deals/Models/DealLead)         |             |
| [`DealProduct`](./classes/Hubleto/App/Community/Deals/Models/DealProduct)   |             |
| [`DealTag`](./classes/Hubleto/App/Community/Deals/Models/DealTag)           |             |
| [`DealTask`](./classes/Hubleto/App/Community/Deals/Models/DealTask)         |             |
| [`LostReason`](./classes/Hubleto/App/Community/Deals/Models/LostReason)     |             |
| [`Tag`](./classes/Hubleto/App/Community/Deals/Models/Tag)                   |             |

### \Hubleto\App\Community\Deals\Models\RecordManagers

#### Classes

| Class                                                                                      | Description |
|--------------------------------------------------------------------------------------------|-------------|
| [`Deal`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/Deal)                 |             |
| [`DealActivity`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/DealActivity) |             |
| [`DealDocument`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/DealDocument) |             |
| [`DealHistory`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/DealHistory)   |             |
| [`DealLead`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/DealLead)         |             |
| [`DealProduct`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/DealProduct)   |             |
| [`DealTag`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/DealTag)           |             |
| [`DealTask`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/DealTask)         |             |
| [`LostReason`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/LostReason)     |             |
| [`Tag`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/Tag)                   |             |

### \Hubleto\App\Community\Deals\Reports

#### Classes

| Class                                                                            | Description |
|----------------------------------------------------------------------------------|-------------|
| [`MonthlyRevenue`](./classes/Hubleto/App/Community/Deals/Reports/MonthlyRevenue) |             |
