v1/book/content/pages/source-code/apps/Deals/Home.md

# 
# Deals

## Namespaces

### \Hubleto\App\Community\Deals

#### Classes

| Class                                                        | Description |
|--------------------------------------------------------------|-------------|
| [`Calendar`](./classes/Hubleto/App/Community/Deals/Calendar) |             |
| [`Loader`](./classes/Hubleto/App/Community/Deals/Loader)     |             |
| [`Workflow`](./classes/Hubleto/App/Community/Deals/Workflow) |             |

### \Hubleto\App\Community\Deals\Controllers

#### Classes

| Class                                                                            | Description |
|----------------------------------------------------------------------------------|-------------|
| [`Deals`](./classes/Hubleto/App/Community/Deals/Controllers/Deals)               |             |
| [`DealsArchive`](./classes/Hubleto/App/Community/Deals/Controllers/DealsArchive) |             |
| [`LostReasons`](./classes/Hubleto/App/Community/Deals/Controllers/LostReasons)   |             |
| [`ReportGoal`](./classes/Hubleto/App/Community/Deals/Controllers/ReportGoal)     |             |
| [`Settings`](./classes/Hubleto/App/Community/Deals/Controllers/Settings)         |             |
| [`Tags`](./classes/Hubleto/App/Community/Deals/Controllers/Tags)                 |             |

### \Hubleto\App\Community\Deals\Controllers\Api

#### Classes

| Class                                                                                                | Description |
|------------------------------------------------------------------------------------------------------|-------------|
| [`CreateFromLead`](./classes/Hubleto/App/Community/Deals/Controllers/Api/CreateFromLead)             |             |
| [`DailyDigest`](./classes/Hubleto/App/Community/Deals/Controllers/Api/DailyDigest)                   |             |
| [`GenerateInvoice`](./classes/Hubleto/App/Community/Deals/Controllers/Api/GenerateInvoice)           |             |
| [`GeneratePdf`](./classes/Hubleto/App/Community/Deals/Controllers/Api/GeneratePdf)                   |             |
| [`GenerateQuotationPdf`](./classes/Hubleto/App/Community/Deals/Controllers/Api/GenerateQuotationPdf) |             |
| [`GetPreviewHtml`](./classes/Hubleto/App/Community/Deals/Controllers/Api/GetPreviewHtml)             |             |
| [`GetPreviewVars`](./classes/Hubleto/App/Community/Deals/Controllers/Api/GetPreviewVars)             |             |
| [`LogActivity`](./classes/Hubleto/App/Community/Deals/Controllers/Api/LogActivity)                   |             |
| [`SetParentLead`](./classes/Hubleto/App/Community/Deals/Controllers/Api/SetParentLead)               |             |

### \Hubleto\App\Community\Deals\Controllers\Boards

#### Classes

| Class                                                                                             | Description |
|---------------------------------------------------------------------------------------------------|-------------|
| [`DealValueByResult`](./classes/Hubleto/App/Community/Deals/Controllers/Boards/DealValueByResult) |             |
| [`DealWarnings`](./classes/Hubleto/App/Community/Deals/Controllers/Boards/DealWarnings)           |             |
| [`MostValuableDeals`](./classes/Hubleto/App/Community/Deals/Controllers/Boards/MostValuableDeals) |             |

### \Hubleto\App\Community\Deals\Extendibles

#### Classes

| Class                                                                                              | Description |
|----------------------------------------------------------------------------------------------------|-------------|
| [`ContextHelp`](./classes/Hubleto/App/Community/Deals/Extendibles/ContextHelp)                     |             |
| [`MailTemplateVariables`](./classes/Hubleto/App/Community/Deals/Extendibles/MailTemplateVariables) |             |
| [`ProductTypes`](./classes/Hubleto/App/Community/Deals/Extendibles/ProductTypes)                   |             |

### \Hubleto\App\Community\Deals\Models

#### Classes

| Class                                                                       | Description |
|-----------------------------------------------------------------------------|-------------|
| [`Deal`](./classes/Hubleto/App/Community/Deals/Models/Deal)                 |             |
| [`DealActivity`](./classes/Hubleto/App/Community/Deals/Models/DealActivity) |             |
| [`DealDocument`](./classes/Hubleto/App/Community/Deals/Models/DealDocument) |             |
| [`DealHistory`](./classes/Hubleto/App/Community/Deals/Models/DealHistory)   |             |
| [`DealLead`](./classes/Hubleto/App/Community/Deals/Models/DealLead)         |             |
| [`DealTag`](./classes/Hubleto/App/Community/Deals/Models/DealTag)           |             |
| [`DealTask`](./classes/Hubleto/App/Community/Deals/Models/DealTask)         |             |
| [`Item`](./classes/Hubleto/App/Community/Deals/Models/Item)                 |             |
| [`LostReason`](./classes/Hubleto/App/Community/Deals/Models/LostReason)     |             |
| [`Tag`](./classes/Hubleto/App/Community/Deals/Models/Tag)                   |             |

### \Hubleto\App\Community\Deals\Models\Migrations

#### Classes

| Class                                                                                            | Description |
|--------------------------------------------------------------------------------------------------|-------------|
| [`Deal_0001`](./classes/Hubleto/App/Community/Deals/Models/Migrations/Deal_0001)                 |             |
| [`Deal_0002`](./classes/Hubleto/App/Community/Deals/Models/Migrations/Deal_0002)                 |             |
| [`Deal_0003`](./classes/Hubleto/App/Community/Deals/Models/Migrations/Deal_0003)                 |             |
| [`Deal_0004`](./classes/Hubleto/App/Community/Deals/Models/Migrations/Deal_0004)                 |             |
| [`DealActivity_0001`](./classes/Hubleto/App/Community/Deals/Models/Migrations/DealActivity_0001) |             |
| [`DealDocument_0001`](./classes/Hubleto/App/Community/Deals/Models/Migrations/DealDocument_0001) |             |
| [`DealHistory_0001`](./classes/Hubleto/App/Community/Deals/Models/Migrations/DealHistory_0001)   |             |
| [`DealLead_0001`](./classes/Hubleto/App/Community/Deals/Models/Migrations/DealLead_0001)         |             |
| [`DealTag_0001`](./classes/Hubleto/App/Community/Deals/Models/Migrations/DealTag_0001)           |             |
| [`DealTask_0001`](./classes/Hubleto/App/Community/Deals/Models/Migrations/DealTask_0001)         |             |
| [`Item_0001`](./classes/Hubleto/App/Community/Deals/Models/Migrations/Item_0001)                 |             |
| [`Item_0002`](./classes/Hubleto/App/Community/Deals/Models/Migrations/Item_0002)                 |             |
| [`LostReason_0001`](./classes/Hubleto/App/Community/Deals/Models/Migrations/LostReason_0001)     |             |
| [`Tag_0001`](./classes/Hubleto/App/Community/Deals/Models/Migrations/Tag_0001)                   |             |

### \Hubleto\App\Community\Deals\Models\RecordManagers

#### Classes

| Class                                                                                      | Description |
|--------------------------------------------------------------------------------------------|-------------|
| [`Deal`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/Deal)                 |             |
| [`DealActivity`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/DealActivity) |             |
| [`DealDocument`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/DealDocument) |             |
| [`DealHistory`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/DealHistory)   |             |
| [`DealLead`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/DealLead)         |             |
| [`DealTag`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/DealTag)           |             |
| [`DealTask`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/DealTask)         |             |
| [`Item`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/Item)                 |             |
| [`LostReason`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/LostReason)     |             |
| [`Tag`](./classes/Hubleto/App/Community/Deals/Models/RecordManagers/Tag)                   |             |

### \Hubleto\App\Community\Deals\Reports

#### Classes

| Class                                                                            | Description |
|----------------------------------------------------------------------------------|-------------|
| [`MonthlyRevenue`](./classes/Hubleto/App/Community/Deals/Reports/MonthlyRevenue) |             |

### \Hubleto\App\Community\Deals\Tests

#### Classes

| Class                                                                                    | Description |
|------------------------------------------------------------------------------------------|-------------|
| [`RenderAllRoutesTest`](./classes/Hubleto/App/Community/Deals/Tests/RenderAllRoutesTest) |             |
